# Q3-Assignments

./: .gitignore  README.md
.devcontainer/: devcontainer.json
growth-mindset-challenge/: README.md  pyproject.toml
growth-mindset-challenge/src/growth_mindset_challenge/: __init__.py  app.py
project01-unit-converter/: README.md  app.py  main.py  pyproject.toml  requirements.txt
project01-unit-converter/src/project01_unit_converter/: __init__.py  app.py
project02_password_strength_meter/: README.md  main.py  pyproject.toml
project03_personal_library_manager/: README.md  book_data.json  library_manager.py  pyproject.toml
project04_assignments/projects_to_be_submitted_by_students/01_madlibs/: main.py
project04_assignments/projects_to_be_submitted_by_students/02_guess_the_number_computer/: main.py
project05_secure_data_encryption/: data.json  main.py  pyproject.toml
project06_Build_Compose_and_Decorate_A_Complete_Traditional_OOP_Practice_Series/: 01_using_self.py  02_using_cls.py  03_public_variables_and_methods.py  04_class_variables_and_class_methods.py  05_static_variables_and_static_methods.py  06_constructors_and_destructors.py  07_access_modifiers.py  08_super_function.py  09_abstract_classes_and_methods.py  10_instace_methods.py  11_class_methods.py  12_static_methods.py  13_composition.py  14_aggregation.py  15_MRO_diamond_inheritance.py  16_function_decorators.py  17_class_decorators.py  18_property_decorators.py  19_callable_call.py  20_custom_exception.py  21_custom_class_iterable.py
python_oop_practice/: main.py
(+47 files in other folders)
