[project]
name = "growth-mindset-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aliyano0", email = "aliyanaqeel97@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
growth-mindset-challenge = "growth_mindset_challenge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
